src/documentation/css/style.css
body {
    background-color: #EBEBEB;
}

/* Sidebar */
.sidebar_nav {
    background-color: #120F25;
    height: 900px;
    margin: 8px;
    padding: 8px;
    border-radius: 8px;
    float: left;
    position:fixed;
}

.sidebar_nav_title {
    font-family: Quantify;
    font-size: 38px;
    color: #EBEBEB;
    line-height: 0%;
    padding: 4px;
}

.sidebar_nav_link {
    font-family: Quantify;
    font-size: 20px;
    color: #b3b3b3;
    text-decoration: none;
    line-height: 0%;
    padding: 5px;
}

.sidebar_nav_link:focus {
    font-weight: 600;
}


#list {
    font-family: Quantify;
    font-size: 20px;
    color: #b3b3b3;;
    padding: 5px;
    max-height: 0;
    overflow: hidden;
    transition: 0.8s linear;
}
  
a:focus+#list {
    max-height: 20em;
}

a[href="nowhere"]:focus {
    pointer-events: none;
}

/* Docs */
h1 {
    font-family: Quantify;
    font-size: 38px;
    color: #120F25;
    line-height: 50%;
    padding: 3px;
}
h2 {
    font-family: Quantify;
    font-size: 28px;
    color: #120F25;
    line-height: 50%;
    padding: 3px;
}

.docs {
    position:relative;
    width: 79%;
    left:15%;
}
.docs-data {
    font-family: 'Segoe UI';
    font-weight: 600;
    font-size: 26px;
    color: #120F25;
    line-height: 105%;
    padding: 5px;
}

/* Code Blocks */
.code-block {
    background-color: #f8f8f8;
    letter-spacing: 50%;
    border-radius: 8px;
    line-height: 80%;
    padding: 8px;
}

.cm {
    color: #bc4444;
}

.io {
    color: #5592a7;
}

.log {
    color: #51b572;
}

.msk {
    color: #e4e75b;
}

.com {
    color: #b3b3b3;
}

/* Mobile */
@media only screen and (max-width: 750px) {
    .sidebar_nav {
        display: none;
    }

    .docs {
        left: 0%;
    }
}

